{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Touch",
            "id": "7f6a9e92-a3ba-440f-b1c4-659b64c77a43",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "4ffe1b97-dfd4-4f4b-912b-48a9ca9f3526",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "e30e6fc6-ab8d-48ad-b342-5224d7f0be30",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4eb960ab-4ac9-4316-8472-63b046a45866",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29365d9f-a35a-46a0-8f8c-f43b5d520026",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}